samples/_failures_safe/1761317076_341025_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e79cd76.c: In function ‘main’:
./samples/SAFE/__tmp_7e79cd76.c:159:37: error: expected ‘)’ at end of input
  159 |                 heap_push(&heap_logs
      |                          ~          ^
      |                                     )
./samples/SAFE/__tmp_7e79cd76.c:159:17: error: too few arguments to function ‘heap_push’
  159 |                 heap_push(&heap_logs
      |                 ^~~~~~~~~
./samples/SAFE/__tmp_7e79cd76.c:36:6: note: declared here
   36 | void heap_push(LogHeap *heap, const LogEntry *entry) {
      |      ^~~~~~~~~
./samples/SAFE/__tmp_7e79cd76.c:159:17: error: expected declaration or statement at end of input
  159 |                 heap_push(&heap_logs
      |                 ^~~~~~~~~
./samples/SAFE/__tmp_7e79cd76.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7e79cd76.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7e79cd76.c:159:17: error: expected declaration or statement at end of input
